Re-run touchpad kcminit on device connect

kcminit runs once on boot then closes.

Devices are less static.

For mouse and keyboard the keyboard daemon watches for input devices
changing and re-runs kcminit modules for both keyboard and mouse.

This patch adds touchpad to the list to cover remaining devices. Having
this inside the keyboard daemon is not semantically sane, but it's an
established pattern and we want a safe fix for 5.27.

BUG: 414559
Fixed-in: 5.27.0


(cherry picked from commit ca59a847bddc906c51fbb41635128f40b1b31a30)